style.css
a {
	text-decoration: none;
}

li {
	list-style-type: none;
}

h1 {
	margin-bottom: 0;
	font-weight: normal;
}

.section {
	background-size: cover;
	background-position: center;
}

[data-anchor="intro"] {
	background-image: url("images/enigma.jpg");
}

[data-anchor="links"] {
	background-image: url("images/cathedral.jpg");
}

[data-anchor="links"] .info {
	background-color: rgba(0, 0, 0, 0.5);
	color: #fff;
	padding: 15px 0;
}

.intro {
	color: #FFFFFF;
	text-align: center;
}

.intro #arrow svg {
	background: rgba(255, 255, 255, 0.2);
}

.intro #arrow path {
	fill: #000000;
}

#name {
	font-family: 'Overpass', sans-serif;
	font-size: 8vw;
	background-color: #000000;
	display: inline-block;
	padding: 5px 15px;
}

#username {
	font-family: 'Overpass Mono', monospace;
	font-size: 4vw;
	background-color: #000000;
	padding: 10px;
}

.info {
	font-family: 'Overpass Mono', monospace;
	color: #9e9e9e;
	text-align: center;
}

.info a {
	color: #9E9E9E;
}

.listtable {
	margin: 0 auto;
	max-width: 20em;
}

.listtable td:nth-child(2) {
	font-size: 0.9em;
	padding-left: 1em;
	vertical-align: top;
	text-align: right;
}

.listtable td img {
	max-width: 100px;
}

#arrow {
	width: 100%;
	height: 20%;
	text-align: center;
	position: absolute;
	bottom: 0;
}

#arrow svg {
	position: absolute;
	bottom: 40px;
	margin-left: -40px;
	width: 80px;
}

#eventslist {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

#linkslist {
	width: 100%;
	position: absolute;
	bottom: 0;
	padding: 10px 5%;
	margin: 0;
	display: flex;
	justify-content: space-between;
	flex-flow: wrap;
	background-color: rgba(255, 255, 255, 0.3);
}

#linkslist li {
	padding: 0 5px;
}

#linkslist img {
	height: 50px;
	width: 50px;
	padding: 2px 0;
}

.github-corner svg {
    z-index: 10
}
.github-corner:hover .octo-arm {
	animation:octocat-wave 560ms ease-in-out
}

@keyframes octocat-wave {
	0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}
}

@media (max-width:500px){
	.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}
}

